add some tests